@@ -1,3 +1,11 @@
+2012-03-08  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
+
+	* matlab/PointsToolbox/bwmesh.m (v0.1.4):
+
+	- Fix documentation again. The node index is not the linear index
+	of the voxel in the image, but the index of the node in the list
+	of nodes.
+
 2012-03-05  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
 	* matlab/PointsToolbox/bwmesh.m (v0.1.3):
